progress on new about page

--- a/march-update/about/new-index.html
+++ b/march-update/about/new-index.html
@@ -25,29 +25,14 @@
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+    <body id="about">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-            <section class="opt-in">
-
-            <!-- Begin MailChimp Signup Form -->
-                <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-                <div id="mc_embed_signup">
-                    <header>
-                        <p>Aleia's Notes : From Side Hustle to Full-Time</p>
-                    </header>
-                    <div id="mc_embed_signup_scroll">
-                        <button>
-                            <p><a href="http://eepurl.com/ci_tVf">Click here to Sign-Up</a></p>
-                        </button>
-                    </div>
-                </div>
-            </section>
-        <header class="page-header light-alt">
+        <header class="page-header">
             <figure class="logo">
                 <a href="../"><img src="../img/logo.svg"/></a>
             </figure>
@@ -66,7 +51,7 @@
                         <li class ="spacer"></li>
                         <li>
                             <a href="#">
-                                My Story
+                                About Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
@@ -97,33 +82,72 @@
                 </div>
             </section>
             <div class="menu-hide">
-            <section class="hero">
-                <div class="hero-copy-wrapper">
-                    <div class="hero-copy">
-                        <p class="hero-intro"><span class="intro-hi">Hi.</span> <span class="intro-name">My name is</span></p>
-                        <h1 class="uppercase">Aleia Walker</h1>
-                        <p class="hero-tagline hairline">frontend developer + instructor + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a></p>
-                    </div>
-                </div>
-            </section>
+            
+            <section class="welcome">
+                    <aside class="welcome-photos">
+                        <div class="photo-row">
+                            <figure class="aleia-photo">
+                                <img src="../img/aleia-6.jpg" alt="photo of Aleia">
+                            </figure>
+                        </div>
+                    </aside>
+                    <aside class="welcome-info">
+                        <div class="welcome-info-wrapper">
+                            <p class="welcome-intro">
+                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
+                            </p>
+                            <h1 class="uppercase">Aleia Walker</h1>
+                            <p class="welcome-tagline">
+                                frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                            </p>
+                            <p>and I help other side hustlers make their mark on the web.</p>
+                        </div> <!-- welcome info wrapper -->
+                        <div class="opt-in">
+                            <!-- Begin MailChimp Signup Form -->
+                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <div id="mc_embed_signup">
+                                <div id="mc_embed_signup_scroll">
+                                    <button>
+                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
+                                    </button>
+                                </div>
+                            </div>
+                        </div> <!-- opt-in end -->        
+                    </aside>
+                </section>
+
+
+
             <main class="about-copy">
-                <p>You’re a multi-passionate, creative entrepreneur. And maybe you’d call yourself a side hustler.</p>
+                <div class="about-copy-wrapper">
 
-                <p>While you’re at your dayjob, you find yourself staring out the cubicle window, daydreaming about growing your business and creating something truly amazing that’s all your own.</p>
+                <h1>About Aleia</h1>
 
-                <p>You’ve got huge goals, but little time. And your website keeps falling by the wayside.</p>
+                <div class="about-spacer"></div>
 
-                <p>In your spare time, you're struggling to create a website that truly reflects you and all you can do.</p>
+                <aside>
+                    <div class="about-aside-copy">
+                        <p>You’re a multi-passionate, creative entrepreneur. And maybe you’d call yourself a side hustler.</p>
 
-                <p class="about-p-subheader">I can help with that.</p>
+                        <p>While you’re at your dayjob, you find yourself staring out the cubicle window, daydreaming about growing your business and creating something truly amazing that’s all your own.</p>
 
-                <p>I’m Aleia, Freelance Frontend Developer + Full-time Side Hustler.</p>
+                        <p>You’ve got huge goals, but little time. And your website keeps falling by the wayside.</p>
+
+                        <p>In your spare time, you're struggling to create a website that truly reflects you and all you can do.</p>
+
+                        <p class="about-p-accent">I can help with that.</p>
+
+                        <p>I’m Aleia, Freelance Frontend Developer + Full-time Side Hustler.</p>
+                    </div>
+
+                    <figure class="about-aside-photo"></figure>
+                </aside>
 
                 <p>You read that right: I’m a full-time freelancer with the heart of a side hustler. I’ve never forgotten the kind of focus it takes to juggle two jobs and navigate yourself through a new career.</p>
 
                 <p>Now my passion is building websites for multi-passionate, creative entrepreneurs looking to transition from their side hustle to their new full-time career so they can start living their dreams.</p>
 
-                <p class="about-p-subheader">Your website is your storefront, waiting room, business card, a brochure, and a catalog, all in one. It’s your customers’ very first impression of you, and THE most important marketing tool you’ve got in today’s world.</p>
+                <p class="about-p-accent">Your website is your storefront, waiting room, business card, a brochure, and a catalog, all in one. It’s your customers’ very first impression of you, and THE most important marketing tool you’ve got in today’s world.</p>
 
                 <p>A polished, engaging professional website customized for your ideal customers just isn’t optional anymore. It’s important to invest in your website from the very beginning.</p>
 
@@ -133,16 +157,32 @@
 
                 <p>I perfected all my tech skills on Skillcrush, where I now spend half of my day helping others transform their careers into tech. And did I mention I also have a t-shirt line inspired by my love of fitness? Yep, I’ll always be a proud multi-passionate entrepreneur.</p>
 
-                <p>Fun facts:</p>
-                <ul>
-                    <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
-                    <li>I have an obsession with sticky notes.</li>
-                    <li>I got hired at Skillcrush via relationships established on Twitter.</li>
-                </ul>
+                <div class="about-list">
+                    <p class="list-lead-in">Fun facts:</p>
+                    <ul>
+                        <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
+                        <li>I have an obsession with sticky notes.</li>
+                        <li>I got hired at Skillcrush via relationships established on Twitter.</li>
+                    </ul>
+                </div>
 
                 <p>Now I’d love to learn more about you and your business so we can start building the website that launches your new career.</p>
 
-                <p class=”about-p-subheader”>Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
+                <p class="about-p-accent">Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
+
+                <div class="opt-in">
+                            <!-- Begin MailChimp Signup Form -->
+                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <div id="mc_embed_signup">
+                                <div id="mc_embed_signup_scroll">
+                                    <button>
+                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
+                                    </button>
+                                </div>
+                            </div>
+                        </div> <!-- opt-in end -->
+                </div>
+
             </main>
 
             <footer>
