--- a/march-update/index.html
+++ b/march-update/index.html
@@ -103,7 +103,7 @@
                     <aside class="welcome-info">
                         <div class="welcome-info-wrapper">
                             <p class="welcome-intro">
-                                <span class="intro-hi">Hi.</span> <span class="intro-name">My name is</span>
+                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
