--- a/march-update/about/new-index.html
+++ b/march-update/about/new-index.html
@@ -108,7 +108,7 @@
                             <div id="mc_embed_signup">
                                 <div id="mc_embed_signup_scroll">
                                     <button>
-                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
+                                        <a href="http://eepurl.com/ci_tVf">Join Me!</a>
                                     </button>
                                 </div>
                             </div>
@@ -158,7 +158,7 @@
                 <p>I perfected all my tech skills on Skillcrush, where I now spend half of my day helping others transform their careers into tech. And did I mention I also have a t-shirt line inspired by my love of fitness? Yep, I’ll always be a proud multi-passionate entrepreneur.</p>
 
                 <div class="about-list">
-                    <p class="list-lead-in">Fun facts:</p>
+                    <h3>Fun facts:</h3>
                     <ul>
                         <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
                         <li>I have an obsession with sticky notes.</li>
@@ -171,16 +171,16 @@
                 <p class="about-p-accent">Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
 
                 <div class="opt-in">
-                            <!-- Begin MailChimp Signup Form -->
-                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-                            <div id="mc_embed_signup">
-                                <div id="mc_embed_signup_scroll">
-                                    <button>
-                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
-                                    </button>
-                                </div>
+                    <!-- Begin MailChimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                        <div id="mc_embed_signup">
+                            <div id="mc_embed_signup_scroll">
+                                <button>
+                                    <a href="http://eepurl.com/ci_tVf">Join Me!</a>
+                                </button>
                             </div>
-                        </div> <!-- opt-in end -->
+                        </div>
+                    </div> <!-- opt-in end -->
                 </div>
 
             </main>
