completed about me page

--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -25,16 +25,16 @@
         <link rel="stylesheet" href="../css/font-awesome.min.css">
         <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body>
+    <body id="about">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-        <header class="page-header light-alt">
+        <header class="page-header">
             <figure class="logo">
-                <a href="../"><img src="../img/logo-dark.svg"/></a>
+                <a href="../"><img src="../img/logo.svg"/></a>
             </figure>
             <figure>
                 <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -51,7 +51,7 @@
                         <li class ="spacer"></li>
                         <li>
                             <a href="#">
-                                My Story
+                                About Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
@@ -81,30 +81,110 @@
                     </ul>
                 </div>
             </section>
-            <div class="menu-hide">        
-            <section class="about-aleia">
-                <div class="title uppercase">
-                    <a href="about-aleia">
-                        <header>
-                            <p class="aleia-title-display">About</p>
-                            <p class="title-sans">Aleia</p>
-                        </header>
-                    </a>
-                </div>
+            <div class="menu-hide">
+            
+            <section class="welcome">
+                <aside class="welcome-photos">
+                    <div class="photo-row">
+                        <figure class="aleia-photo">
+                            <img src="../img/aleia-6.jpg" alt="photo of Aleia">
+                        </figure>
+                    </div>
+                </aside>
+                <aside class="welcome-info">
+                    <div class="welcome-info-wrapper">
+                        <p class="welcome-intro">
+                            <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
+                        </p>
+                        <h1 class="uppercase">Aleia Walker</h1>
+                        <p class="welcome-tagline">
+                            frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                        </p>
+                        <p>and I help other side hustlers make their mark on the web.</p>
+                    </div> <!-- welcome info wrapper -->
+                    <div class="opt-in">
+                        <!-- Begin MailChimp Signup Form -->
+                        <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                        <div id="mc_embed_signup">
+                            <div id="mc_embed_signup_scroll">
+                                <button>
+                                    <a href="http://eepurl.com/ci_tVf">Join Me!</a>
+                                </button>
+                            </div>
+                        </div>
+                    </div> <!-- opt-in end -->        
+                </aside>
             </section>
-            <section class="about-dev">
-                <div class="title uppercase">
-                    <a href="about-aleia/aleia-dev">
-                        <header>
-                            <p class="dev-title-display">Aleia</p>
-                            <p class="title-sans">+ Dev</p>
-                        </header>
-                    </a>
-                    <p>
 
-                    </p>
+
+
+            <main class="about-copy">
+                <div class="about-copy-wrapper">
+
+                <h1>About Aleia</h1>
+
+                <div class="about-spacer"></div>
+
+                <aside>
+                    <div class="about-aside-copy">
+                        <p>You’re a multi-passionate, creative entrepreneur. And maybe you’d call yourself a side hustler.</p>
+
+                        <p>While you’re at your dayjob, you find yourself staring out the cubicle window, daydreaming about growing your business and creating something truly amazing that’s all your own.</p>
+
+                        <p>You’ve got huge goals, but little time. And your website keeps falling by the wayside.</p>
+
+                        <p>In your spare time, you're struggling to create a website that truly reflects you and all you can do.</p>
+
+                        <p class="about-p-accent">I can help with that.</p>
+
+                        <p>I’m Aleia, Freelance Frontend Developer + Full-time Side Hustler.</p>
+                    </div>
+
+                    <figure class="about-aside-photo"></figure>
+                </aside>
+
+                <p>You read that right: I’m a full-time freelancer with the heart of a side hustler. I’ve never forgotten the kind of focus it takes to juggle two jobs and navigate yourself through a new career.</p>
+
+                <p>Now my passion is building websites for multi-passionate, creative entrepreneurs looking to transition from their side hustle to their new full-time career so they can start living their dreams.</p>
+
+                <p class="about-p-accent">Your website is your storefront, waiting room, business card, a brochure, and a catalog, all in one. It’s your customers’ very first impression of you, and THE most important marketing tool you’ve got in today’s world.</p>
+
+                <p>A polished, engaging professional website customized for your ideal customers just isn’t optional anymore. It’s important to invest in your website from the very beginning.</p>
+
+                <p>But I’m here to make it easy, fun, and inspiring—because a multitasking creative like you does not need more stressful items on your to-do list.</p>
+
+                <p>I am a self-taught developer with degrees in Creative Writing and International Studies. But when I graduated, I saw the writing on the wall—that online business would soon take center stage—and so I pursued tech after college.</p>
+
+                <p>I perfected all my tech skills on Skillcrush, where I now spend half of my day helping others transform their careers into tech. And did I mention I also have a t-shirt line inspired by my love of fitness? Yep, I’ll always be a proud multi-passionate entrepreneur.</p>
+
+                <div class="about-list">
+                    <h3>Fun facts:</h3>
+                    <ul>
+                        <li>As a child, I spent 10 years as a ballerina and now always walk with my feet turned out.</li>
+                        <li>I have an obsession with sticky notes.</li>
+                        <li>I got hired at Skillcrush via relationships established on Twitter.</li>
+                    </ul>
                 </div>
-            </section>
+
+                <p>Now I’d love to learn more about you and your business so we can start building the website that launches your new career.</p>
+
+                <p class="about-p-accent">Wanna keep in touch? Jump on my email list to get the inspiration you need to keep growing, try new things, and go for it - delivered straight to your inbox.</p>
+
+                <div class="opt-in">
+                    <!-- Begin MailChimp Signup Form -->
+                    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                        <div id="mc_embed_signup">
+                            <div id="mc_embed_signup_scroll">
+                                <button>
+                                    <a href="http://eepurl.com/ci_tVf">Join Me!</a>
+                                </button>
+                            </div>
+                        </div>
+                    </div> <!-- opt-in end -->
+                </div>
+
+            </main>
+
             <footer>
             <div class="footer-copy">
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
