udpated menu, added contact page and thank you page

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -67,16 +67,16 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="process/">
-                                Process
+                            <a href="contact/">
+                                Contact
                             </a>
                         </li>
-                        <li class ="spacer"></li>
+                        <!-- <li class ="spacer"></li>
                         <li>
                             <a href="/blog">
                                 Archives
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </section>
