updated wtba portfolio example

--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -151,7 +151,7 @@
                             </div>
                         </article>
 
-                        <article class="portfolio-item"> <!-- ITEM #1 -->
+    <!-- ITEM #1 -->     <!-- <article class="portfolio-item"> 
                             <div class="portfolio-header">
                                 <header>
                                     <div class="portfolio-item-header">
@@ -162,11 +162,11 @@
                                     </div>
                                 </header>
                             </div>
-                            <div class="portfolio-content">
+                            <div class="portfolio-content"> -->
                                <!--  <div class="content-title">
                                     Working to be Awesome
                                 </div> -->
-                                <div class="content">
+                                <!-- <div class="content">
                                     <figure>
                                         <a href="http://workingtobeawesome.com" target="_blank"><img src="../img/wtba-logo.svg"></a>
                                     </figure>
@@ -177,7 +177,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </article>
+                        </article> -->
                         <article class="portfolio-item"> <!-- ITEM #2 -->
                             <div class="portfolio-header">
                                 <header>
