added sales subdomain

--- a/march-update/sales/index.html
+++ b/march-update/sales/index.html
@@ -18,13 +18,13 @@
         <!-- Place favicon.ico in the root directory -->
         <link rel="icon" href="favicon.ico">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/font-awesome.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body class="homepage">
+    <body class="sales">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -33,7 +33,7 @@
         <div class="wrapper">
             <header class="page-header">
                 <figure class="logo">
-                    <img src="img/logo.svg"/>
+                    <img src="../img/logo.svg"/>
                 </figure>
                 <figure>
                     <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
@@ -49,25 +49,25 @@
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="about/">
+                            <a href="../about/">
                                 About Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="work-with-me/">
+                            <a href="../work-with-me/">
                                 Work with Me
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="portfolio/">
+                            <a href="../portfolio/">
                                 Portfolio
                             </a>
                         </li>
                         <li class ="spacer"></li>
                         <li>
-                            <a href="contact/">
+                            <a href="../contact/">
                                 Contact
                             </a>
                         </li>
@@ -80,52 +80,54 @@
                     </ul>
                 </div>
             </section>
-            <div class="menu-hide">
+             <div class="menu-hide"> 
                 <section class="welcome">
-                    <aside class="welcome-photos">
-                        <div class="photo-row">
-                            <figure class="aleia-photo" id="welcome-img-1">
-                                <img src="img/aleia-1.jpg" alt="photo of Aleia">
-                            </figure>
-                            <figure class="aleia-photo">
-                                <img src="img/aleia-4.jpg" alt="photo of Aleia">
-                            </figure>
+                    <aside class="welcome-left">
+                        <div class="welcome-photos">
+                            <div class="photo-row">
+                                <figure class="aleia-photo">
+                                    <img src="../img/aleia-7.jpg" alt="photo of Aleia">
+                                </figure>
+                            </div>
                         </div>
-                        <div class="photo-row">
-                            <figure class="aleia-photo">
-                                <img src="img/aleia-5.jpg" alt="photo of Aleia">
-                            </figure>
-                            <figure class="aleia-photo">
-                                <img src="img/aleia-6.jpg" alt="photo of Aleia">
-                            </figure>
-                        </div>
-                    </aside>
-                    <aside class="welcome-info">
-                        <div class="welcome-info-wrapper">
+                        <div class="welcome-sales-wrapper">
                             <p class="welcome-intro">
                                 <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                                I am a frontend developer + instructor at Skillcrush + <span class="welcome-span">full-time side hustler.</span>
                             </p>
-                            <p>and I help other side hustlers make their mark on the web.</p>
                         </div> <!-- welcome info wrapper -->
-                        <div class="opt-in">
+                    </aside>
+                    <aside class="welcome-right">
+                    
+
+                    <div class="opt-in-divider"></div>
+                    
+                    <div class="opt-in">
+                        <div class="opt-in-tagline">
+                            <p>I help side hustlers go from freelance to full time.</p>
+                            <p>Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
+                        </div>
+                        <figure class="welcome-opt-in">
+                            <img src="../img/opt-in-header.jpg" alt="opt-in cover photo">
+                        </figure>
+                        </div> <!-- opt-in end -->
+
+                    <aside class="welcome-sales">
                             <!-- Begin MailChimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
                                 <div id="mc_embed_signup_scroll">
                                     <button>
-                                        <p><a href="http://eepurl.com/ci_tVf">Join Me!</a></p>
+                                        <p><a href="http://eepurl.com/ci_tVf">Click Here for Free Guide</a></p>
                                     </button>
                                 </div>
-                            </div>
-                        </div> <!-- opt-in end -->        
+                            </div>  
                     </aside>
+                    </aside> <!-- welcome right end -->
                 </section>
-            </main>
-
             <footer>
                 <div class="footer-copy">
                     <p class="footer-tag">Aleia elsewhere on the web</p>
@@ -163,8 +165,8 @@
                     </ul>
                 </div>
             </footer>
-        </div> <!-- menu hide -->
-<!--     </div> wrapper div ended -->
+      </div>  <!-- menu hide -->
+     </div> <!-- wrapper div ended -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
