added images for email template

--- a/march-update/about/index.html
+++ b/march-update/about/index.html
@@ -100,7 +100,7 @@
                         <p class="welcome-tagline">
                             frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
                         </p>
-                        <p>and I help other side hustlers make their mark on the web.</p>
+                        <p class="cta">and I help other side hustlers make their mark on the web.</p>
                     </div> <!-- welcome info wrapper -->
                     <div class="opt-in">
                         <!-- Begin MailChimp Signup Form -->
