updated all sign up forms to ConvertKit and testing red button

--- a/march-update/index.html
+++ b/march-update/index.html
@@ -23,6 +23,23 @@
         <link rel="stylesheet" href="css/font-awesome.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+
+        <!-- Facebook Pixel Code -->
+        <script>
+        !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+        n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+        document,'script','https://connect.facebook.net/en_US/fbevents.js');
+        fbq('init', '1762804570603845'); // Insert your pixel ID here.
+        fbq('track', 'PageView');
+        </script>
+        <noscript><img height="1" width="1" style="display:none"
+        src="https://www.facebook.com/tr?id=1762804570603845&ev=PageView&noscript=1"
+        /></noscript>
+        <!-- DO NOT MODIFY -->
+        <!-- End Facebook Pixel Code -->
+
     </head>
     <body class="homepage sales">
         <!--[if lt IE 8]>
@@ -96,7 +113,7 @@
                         <div class="opt-in-divider"></div>
                     
                         <div class="opt-in-tagline">
-                            <p>I help side hustlers go from freelance to full time.</p>
+                            <p>... and I help side hustlers go from freelance to full time.</p>
                             <p>Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
                         </div>
                     </aside>
@@ -195,6 +212,12 @@
                     </div>
                 </footer>
         </div> <!-- wrapper div ended -->
+
+        <script>
+            fbq('track', 'ViewContent');
+            fbq('track', 'Lead');
+        </script>
+
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
