--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -108,11 +108,49 @@
                             <p class="welcome-tagline">
                                 frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
                             </p>
-                            <p  class="cta">and I help other side hustlers make their mark on the web.</p>
-                        </div> <!-- welcome info wrapper -->
-                        <div class="opt-in">
+                            <p class="cta">... and I help other side hustlers make their mark on the web.</p>
+                        <p class="cta">Join me if you want to make a plan to change your career this year!</p>
+                    </div> <!-- welcome info wrapper -->
+                    <div class="email-signup">
+                            <!-- Begin ConvertKit Signup Form -->
+                            <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
+                            <div class="ck_form_container ck_inline" data-ck-version="6">
+                              <div class="ck_form ck_naked">
+                              <div class="ck_form_fields">
+                                <div id="ck_success_msg" style="display:none;">
+                                  <p>Success! Now check your email to confirm your subscription and download your guide.</p>
+                                </div>
+
+                                <!--  Form starts here  -->
+                                <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/159992/subscribe" data-remote="true">
+                                  <input type="hidden" value="{&quot;form_style&quot;:&quot;naked&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
+                                  <input type="hidden" name="id" value="159992" id="landing_page_id">
+                                  <div class="ck_errorArea">
+                                    <div id="ck_error_msg" style="display:none">
+                                      <p>There was an error submitting your subscription. Please try again.</p>
+                                    </div>
+                                  </div>
+                                  <div class="ck_control_group ck_email_field_group">
+                                    <label class="ck_label" for="ck_emailField" style="display: none">Email Address</label>
+                                    <input type="text" name="first_name" class="ck_first_name" id="ck_firstNameField" placeholder="First Name">
+                                    <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="Email Address" required>
+                                  </div>
+                                  <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
+                                    <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
+                                  </div>
+
+
+                                  <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
+                                    Join Me!
+                                  </button>
+                                </form>
+                              </div>
+
+                            </div>
+
+                            </div>
                             <!-- Begin MailChimp Signup Form -->
-                            <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+                            <!-- <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
                                 <div id="mc_embed_signup_scroll">
                                     <button>
@@ -120,7 +158,7 @@
                                     </button>
                                 </div>
                             </div>
-                        </div> <!-- opt-in end -->        
+                        </div>  --><!-- opt-in end -->        
                     </aside>
                 </section>
 
