updated link to shs in header + added live chat to contact form

--- a/march-update/contact/index.html
+++ b/march-update/contact/index.html
@@ -93,7 +93,7 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                                frontend developer + instructor at Skillcrush + <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
                             </p>
                             <p class="cta">... and I help other side hustlers make their mark on the web.</p>
                         <p class="cta">Join me if you want to make a plan to change your career this year!</p>
@@ -240,5 +240,16 @@
         });                
         </script>
 
+        <!-- Start of LiveChat (www.livechatinc.com) code -->
+        <script type="text/javascript">
+        window.__lc = window.__lc || {};
+        window.__lc.license = 8629559;
+        (function() {
+          var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+          lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+        })();
+        </script>
+        <!-- End of LiveChat code -->
 
     </body>
