--- a/march-update/index.html
+++ b/march-update/index.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="aleia walker, aleia, freelance writer, writing, web design, web designer, web development, customer support, atlanta, caribbean" >
         <meta name="author" content="Aleia Walker" >
         <meta name="twitter:description" content="Aleia Walker is a frontend web developer and designer based in Atlanta. Working everyday to be awesome. And humble.">
-    
+        <meta name="p:domain_verify" content="26747e1e564f614a66efbbd3db924195"/> <!-- pinterest -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -106,7 +106,7 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                <span class="welcome-span">I am a web developer + instructor at Skillcrush +</span> full-time side hustler.
+                                <span class="welcome-span">I am a web developer + instructor at Skillcrush +</span> <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
                             </p>
                         </div> <!-- welcome info wrapper -->
 
@@ -238,5 +238,16 @@
             });
         });                
         </script>
+        <!-- Start of LiveChat (www.livechatinc.com) code -->
+        <script type="text/javascript">
+        window.__lc = window.__lc || {};
+        window.__lc.license = 8629559;
+        (function() {
+          var lc = document.createElement('script'); lc.type = 'text/javascript'; lc.async = true;
+          lc.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.livechatinc.com/tracking.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lc, s);
+        })();
+        </script>
+        <!-- End of LiveChat code -->
     </body>
 </html>
