--- a/march-update/portfolio/index.html
+++ b/march-update/portfolio/index.html
@@ -106,7 +106,7 @@
                             </p>
                             <h1 class="uppercase">Aleia Walker</h1>
                             <p class="welcome-tagline">
-                                frontend developer + instructor at Skillcrush + <a href="https://barrebodyspirits.com" target="_blank">full-time side hustler</a>
+                                frontend developer + instructor at Skillcrush + <a href="https://www.bit.ly/side-hustle-starter">full-time side hustler</a>.
                             </p>
                             <p class="cta">... and I help other side hustlers make their mark on the web.</p>
                         <p class="cta">Join me if you want to make a plan to change your career this year!</p>
