--- a/march-update/sales/index.html
+++ b/march-update/sales/index.html
@@ -24,177 +24,90 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
         <script src="http://www.aleiawalker.com/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
-    <body class="sales">
+    <body id="sales">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
         <!-- Add your site or application content here -->
-        <div class="wrapper">
-            <header class="page-header">
-                <figure class="logo">
-                    <img src="http://www.aleiawalker.com/img/logo.svg"/>
-                </figure>
-                <figure>
-                    <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
-                </figure>
+        <main class="wrapper sales-wrapper">
+            <header class="page-header sales-header">
+                <h1>Squarespace in a Box</h1>
+                <p>Content plan + website for freelancers</p>
             </header>
-            <section id="menu-main" class="uppercase">
-                <div class="menu-wrapper">
-                    <ul class="menu-active">
-                        <li>
-                            <a href="http://www.aleiawalker.com/">
-                                Home                                
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="http://www.aleiawalker.com/about/">
-                                About Me
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="http://www.aleiawalker.com/work-with-me/">
-                                Work with Me
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="http://www.aleiawalker.com/portfolio/">
-                                Portfolio
-                            </a>
-                        </li>
-                        <li class ="spacer"></li>
-                        <li>
-                            <a href="http://www.aleiawalker.com/contact/">
-                                Contact
-                            </a>
-                        </li>
-                        <!-- <li class ="spacer"></li>
-                        <li>
-                            <a href="/blog">
-                                Archives
-                            </a>
-                        </li> -->
-                    </ul>
-                </div>
-            </section>
-            <div class="menu-hide"> 
-                <section class="welcome">
-                    <aside class="welcome-left">
-                        <div class="welcome-intro">
-                            <p>
-                                <span class="intro-hi">Hello.</span> <span class="intro-name">My name is</span>
-                            </p>
-                            <h1 class="uppercase">Aleia Walker</h1>
-                            <p class="welcome-tagline">
-                                <span class="welcome-span">I am a web developer + instructor at Skillcrush +</span> full-time side hustler.
-                            </p>
-                        </div> <!-- welcome info wrapper -->
+                <section class="pain-points">
 
-                        <div class="opt-in-divider"></div>
-                    
-                        <div class="opt-in-tagline">
-                            <p>I help side hustlers go from freelance to full time.</p>
-                            <p>Join me in fighting your fears and learn how escape your 9 to 5 by building your side hustle.</p>
-                        </div>
-                    </aside>
-                    <aside class="welcome-right">
-                        <figure class="opt-in">
-                            <img src="http://www.aleiawalker.com/img/opt-in-header.jpg" alt="opt-in cover photo">
-                        </figure>
-                        <div class="email-signup">
-                            <!-- Begin ConvertKit Signup Form -->
-                            <script src="https://assets.convertkit.com/assets/CKJS4.js?v=21"></script>
-                            <div class="ck_form_container ck_inline" data-ck-version="6">
-                              <div class="ck_form ck_naked">
-                              <div class="ck_form_fields">
-                                <div id="ck_success_msg" style="display:none;">
-                                  <p>Success! Now check your email to confirm your subscription and download your guide.</p>
-                                </div>
-
-                                <!--  Form starts here  -->
-                                <form id="ck_subscribe_form" class="ck_subscribe_form" action="https://app.convertkit.com/landing_pages/159992/subscribe" data-remote="true">
-                                  <input type="hidden" value="{&quot;form_style&quot;:&quot;naked&quot;,&quot;embed_style&quot;:&quot;inline&quot;,&quot;embed_trigger&quot;:&quot;scroll_percentage&quot;,&quot;scroll_percentage&quot;:&quot;70&quot;,&quot;delay_seconds&quot;:&quot;10&quot;,&quot;display_position&quot;:&quot;br&quot;,&quot;display_devices&quot;:&quot;all&quot;,&quot;days_no_show&quot;:&quot;15&quot;,&quot;converted_behavior&quot;:&quot;show&quot;}" id="ck_form_options">
-                                  <input type="hidden" name="id" value="159992" id="landing_page_id">
-                                  <div class="ck_errorArea">
-                                    <div id="ck_error_msg" style="display:none">
-                                      <p>There was an error submitting your subscription. Please try again.</p>
-                                    </div>
-                                  </div>
-                                  <div class="ck_control_group ck_email_field_group">
-                                    <label class="ck_label" for="ck_emailField" style="display: none">Email Address</label>
-                                    <input type="text" name="first_name" class="ck_first_name" id="ck_firstNameField" placeholder="First Name">
-                                    <input type="email" name="email" class="ck_email_address" id="ck_emailField" placeholder="Email Address" required>
-                                  </div>
-                                  <div class="ck_control_group ck_captcha2_h_field_group ck-captcha2-h" style="position: absolute !important;left: -999em !important;">
-                                    <input type="text" name="captcha2_h" class="ck-captcha2-h" id="ck_captcha2_h" placeholder="We use this field to detect spam bots. If you fill this in, you will be marked as a spammer.">
-                                  </div>
-
-
-                                  <button class="subscribe_button ck_subscribe_button btn fields" id="ck_subscribe_button">
-                                    Click here for free guide
-                                  </button>
-                                </form>
-                              </div>
-
-                            </div>
-
-                            </div>
-
-
-                            <!-- Begin MailChimp Signup Form -->
-                            <!-- <link href="http://cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-                            <div id="mc_embed_signup">
-                                <div id="mc_embed_signup_scroll">
-                                    <button>
-                                        <p><a href="http://eepurl.com/ci_tVf">Click Here for Free Guide</a></p>
-                                    </button>
-                                </div>
-                            </div>   -->
-                        </div>
-                    </aside> <!-- welcome right end -->
                 </section>
-            </div>  <!-- menu hide -->
+                <section class="sales-solutions">
+
+                </section>
+                <section class="sales-included">
+
+                </section>
+                <section class="sales-payment">
+
+                </section>
+                <section class="sales-testimonials">
+
+                </section>
+                <section class="sales-bio">
+
+                </section>
+                <section class="sales-clients">
+
+                </section>
+                <section class="sales-faqs">
+
+                </section>
                 <footer>
-                    <div class="footer-copy">
-                        <p class="footer-tag">Aleia elsewhere on the web</p>
-                        <ul class="social">
-                            <li>
-                                <a href="https://twitter.com/msaleia" target="_blank">
-                                    <i class="fa fa-twitter fa-lg"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/msaleia" target="_blank">
-                                    <i class="fa fa-github-alt fa-lg"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://linkedin.com/in/aleiawalker" target="_blank">
-                                    <i class="fa fa-linkedin fa-lg"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://behance.net/aleiawalker" target="_blank">
-                                    <i class="fa fa-behance fa-lg"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mailto:aleia@aleiawalker.com">
-                                    <i class="fa fa-envelope fa-lg"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="http://eepurl.com/ci_tVf">
-                                    <i class="fa fa-rss fa-lg"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <section class="footer-copy">
+                        <div class="sales-title">
+                            <h2>Squarespace in a Box</h2>
+                        </div>
+                        <div class="footer-bio">
+                            <div class="footer-author">
+                                <p>Brought to you by</p>
+                                <figure class="logo">
+                                    <img src="http://www.aleiawalker.com/img/logo.svg" alt="aleia walker logo">
+                                </figure>
+                                <h2>Aleia Walker</h2>
+                            </div>
+                            <ul class="social">
+                                <li>
+                                    <a href="https://twitter.com/msaleia" target="_blank">
+                                        <i class="fa fa-twitter fa-lg"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://github.com/msaleia" target="_blank">
+                                        <i class="fa fa-github-alt fa-lg"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://linkedin.com/in/aleiawalker" target="_blank">
+                                        <i class="fa fa-linkedin fa-lg"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://behance.net/aleiawalker" target="_blank">
+                                        <i class="fa fa-behance fa-lg"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="mailto:aleia@aleiawalker.com">
+                                        <i class="fa fa-envelope fa-lg"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="http://eepurl.com/ci_tVf">
+                                        <i class="fa fa-rss fa-lg"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div> <!-- footer bio -->
+                    </section> <!-- footer copy -->
                 </footer>
-        </div> <!-- wrapper div ended -->
+        </main> <!-- wrapper main ended -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
